# systemd-journal-logger.rs

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.forgejo/workflows/: ci.yaml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
examples/: custom_fields.rs  systemd_service.rs
src/: client.rs  fields.rs  lib.rs  memfd.rs  socket.rs
supply-chain/: audits.toml  config.toml
tests/: extra_journal_fields.rs  init.rs  init_with_extra_fields.rs  journal.rs  journal_stream.rs  log_to_journal.rs  log_with_extra_fields.rs
