[package]
name = "systemd-journal-logger"
version = "0.5.1"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lunaryorn/systemd-journal-logger.rs"
documentation = "https://docs.rs/systemd-journal-logger"
description = "Systemd journal logger for the log facade."
categories = ["development-tools::debugging"]
keywords = ["logging", "systemd", "journal"]
edition = "2018"

[dependencies]
# libsystemd isn't no_std compatible so we can conveniently enable log's std
# feature unconditionally.  We require std for the set_boxed_logger field in
# init_with_extra_fields.
log = { version = "^0.4", features = ["std", "kv_unstable"] }
libsystemd = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
serde_json = "^1"
rand = "^0.8"
simple_logger = "2.1.0"
log = { version = "0.4.16", features = ["kv_unstable_std"] }

[[test]]
name = "journal_stream"
harness = false

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
post-release-commit-message = "Bump version to {{next_version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
pre-release-replacements = [
    { file = "README.md", search = "systemd-journal-logger = \".+\"", replace = "systemd-journal-logger = \"{{version}}\"" },
    # Update the changelog
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/lunaryorn/systemd-journal-logger.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
