[package]
name = "systemd-journal-logger"
version = "1.0.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/swsnr/systemd-journal-logger.rs"
documentation = "https://docs.rs/systemd-journal-logger"
description = "Systemd journal logger for the log facade."
categories = ["development-tools::debugging"]
keywords = ["logging", "systemd", "journal"]
edition = "2021"
rust-version = "1.71"

[dependencies]
# libsystemd isn't no_std compatible so we can conveniently enable log's std
# feature unconditionally.  We require std for the set_boxed_logger field in
# init_with_extra_fields.
log = { version = "^0.4", features = ["std", "kv_unstable"] }
libc = "0.2.148"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.86"
rand = "0.8.5"
log = { version = "0.4.1", features = ["kv_unstable_std"] }

[[test]]
name = "journal_stream"
harness = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
sign-commit = true
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/systemd-journal-logger.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
# Github actions checks this for us.
verify = false
