[package]
name = "systemd-journal-logger"
version = "2.2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/swsnr/systemd-journal-logger.rs"
documentation = "https://docs.rs/systemd-journal-logger"
description = "Systemd journal logger for the log facade."
categories = ["development-tools::debugging"]
keywords = ["logging", "systemd", "journal"]
edition = "2021"
# When updating the rust-version, update the version of the compiler used 
# in the pipelines under .github/workflows
rust-version = "1.66"

[dependencies]
log = { version = "^0.4", features = ["std", "kv"] }
rustix = { version = "0.38.37", default-features = false, features = ["std", "fs", "net"] }

[dev-dependencies]
similar-asserts = "1.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
log = { version = "0.4.22", features = ["kv_std"] }
retry = "2.0.0"

[[test]]
name = "journal_stream"
harness = false

[package.metadata.release]
allow-branch = ["main"]
sign-tag = true
sign-commit = true
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://github.com/swsnr/systemd-journal-logger.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
# Github actions checks this for us.
verify = false
